--- a/Project/src/main/webapp/yogiseeoMohang/css/style.css
+++ b/Project/src/main/webapp/yogiseeoMohang/css/style.css
@@ -4,8 +4,8 @@ Author: yaminncco
 
 Colors:
 	Body 		: #333
-	Headers 	: #2B2D42
-	Primary 	: #D10024
+	Headers 	: #74b9ff
+	Primary 	: #0984e3
 	Dark 		: #15161D ##1E1F29
 	Grey 		: #E4E7ED #FBFBFC #8D99AE #B9BABC
 
@@ -60,10 +60,15 @@ Table OF Contents
     height : 50px;
 	
 }
-div#header {
-    position: sticky;
-    height: 200px;
-    z-index: 1005;
+
+.affix {
+  top: 0;
+  width: 100%;
+  z-index: 9999 !important;
+}
+
+.affix + .container-fluid {
+  padding-top: 70px;
 }
 
 .carousel-inner{
@@ -85,11 +90,19 @@ div#header {
   
 }
 
+h1.content{
+  height: 50px;
+  font-weight: 700;
+  vertical-align: middle !important;
+  color: #fff !important;
+  padding: 15px;
+  margin: 0 0 10px;
+}
+
 h3.title{
   height: 50px;
   vertical-align: middle !important;
-  background-color: #38b6ff !important;
-  color: white !important;
+  color: #74b9ff !important;
   padding: 15px;
 }
 
@@ -113,7 +126,7 @@ a {
 }
 
 a:hover, a:focus {
-  color: #D10024;
+  color: #0984e3;
   text-decoration: none;
   outline: none;
 }
@@ -124,8 +137,9 @@ ul, ol {
   list-style: none
 }
 
-	
-
+li.title{
+  font-weight: bold;
+}
 
 /*----------------------------*\
 	Buttons
@@ -134,7 +148,7 @@ ul, ol {
 .primary-btn {
   display: inline-block;
   padding: 12px 30px;
-  background-color: #38b6ff;
+  background-color: #0984e3;
   border: none;
   border-radius: 40px;
   color: #FFF;
@@ -218,7 +232,7 @@ textarea.input {
 
 .input-number .qty-up:hover, .input-number .qty-down:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #0984e3;
 }
 
 /*-- Select input --*/
@@ -298,8 +312,8 @@ textarea.input {
 }
 
 .input-radio input[type="radio"]:checked+label span, .input-checkbox input[type="checkbox"]:checked+label span {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #0984e3;
+  /* border-color: #0984e3; */
 }
 
 .input-radio input[type="radio"]:checked+label span:after {
@@ -339,7 +353,7 @@ textarea.input {
 
 .section-title {
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   margin-top: 15px;
 }
 
@@ -376,13 +390,13 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: #0984e3;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
 
 .section-tab-nav li.active a {
-  color: #D10024;
+  color: #0984e3;
 }
 
 .section-tab-nav li a:hover:after, .section-tab-nav li a:focus:after, .section-tab-nav li.active a:after {
@@ -440,7 +454,7 @@ textarea.input {
 }
 
 #breadcrumb .breadcrumb-tree li a:hover {
-  color: #D10024;
+  color: #0984e3;
 }
 
 /*=========================================================
@@ -472,11 +486,11 @@ textarea.input {
 }
 
 .header-links li a:hover {
-  color: #D10024;
+  color: #0984e3;
 }
 
 .header-links li i {
-  color: #D10024;
+  color: #0984e3;
   margin-right: 5px;
 }
 
@@ -487,7 +501,7 @@ textarea.input {
 #header {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: white;
+  background-color: #74b9ff;
 }
 
 .header-logo {
@@ -498,7 +512,7 @@ textarea.input {
   display: block;
 }
 #WDH{
-  color: #38b6ff;
+  color: #74b9ff;
 }
 
 /*----------------------------*\
@@ -506,6 +520,7 @@ textarea.input {
 \*----------------------------*/
 
 .header-search {
+  text-align: center;
   padding: 15px 0px;
 }
 
@@ -521,12 +536,13 @@ textarea.input {
 .header-search form .input {
   width: calc(100% - 260px);
   margin-right: -4px;
+  border-radius: 40px 0px 0px 40px;
 }
 
 .header-search form .search-btn {
   height: 40px;
-  width: 100px;
-  background: #38b6ff;
+  width: 50px;
+  background: #0984e3;
   color: #FFF;
   font-weight: 700;
   border: none;
@@ -578,7 +594,7 @@ textarea.input {
   border-radius: 50%;
   font-size: 10px;
   color: #FFF;
-  background-color: #D10024;
+  background-color: #0984e3;
 }
 
 .header-ctn .menu-toggle {
@@ -636,7 +652,7 @@ textarea.input {
   display: inline-block;
   width: calc(50% - 0px);
   padding: 12px;
-  background-color: #D10024;
+  background-color: #0984e3;
   color: #FFF;
   text-align: center;
   font-weight: 700;
@@ -666,7 +682,7 @@ textarea.input {
 #navigation {
   background: #FFF;
   border-bottom: 2px solid #E4E7ED;
-  border-top: 3px solid #D10024;
+  /* border-top: 3px solid #0984e3; */
 }
 
 /*----------------------------*\
@@ -674,7 +690,7 @@ textarea.input {
 \*----------------------------*/
 
 .main-nav>li+li {
-  margin-left: 30px
+  margin-left: 50px
 }
 
 .main-nav>li>a {
@@ -682,7 +698,7 @@ textarea.input {
 }
 
 .main-nav>li>a:hover, .main-nav>li>a:focus, .main-nav>li.active>a {
-  color: #D10024;
+  color: #0984e3;
   background-color: transparent;
 }
 
@@ -691,7 +707,7 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: #0984e3;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -741,6 +757,7 @@ textarea.input {
   }
   .main-nav>li {
     display: block;
+    margin-right: 50em
     float: none;
   }
   .main-nav>li+li {
@@ -769,7 +786,7 @@ textarea.input {
   bottom: 0;
   left: 0px;
   width: 60%;
-  background: #D10024;
+  background: #0984e3;
   opacity: 0.9;
   -webkit-transform: skewX(-45deg);
   -ms-transform: skewX(-45deg);
@@ -783,7 +800,7 @@ textarea.input {
   bottom: 0;
   left: 1px;
   width: 100%;
-  background: #D10024;
+  background: #0984e3;
   opacity: 0.9;
   -webkit-transform: skewX(-45deg) translateX(-100%);
   -ms-transform: skewX(-45deg) translateX(-100%);
@@ -906,8 +923,8 @@ textarea.input {
 }
 
 .product:hover {
-  -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
-  box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
+  -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #0984e3;
+  box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #0984e3;
 }
 
 .product .product-img {
@@ -932,13 +949,13 @@ textarea.input {
 
 .product .product-img .product-label>span.sale {
   background-color: #FFF;
-  border-color: #D10024;
-  color: #D10024;
+  border-color: #0984e3;
+  color: #0984e3;
 }
 
 .product .product-img .product-label>span.new {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #0984e3;
+  border-color: #0984e3;
   color: #FFF;
 }
 
@@ -966,11 +983,11 @@ textarea.input {
 }
 
 .product .product-body .product-name>a:hover, .product .product-body .product-name>a:focus {
-  color: #D10024;
+  color: #0984e3;
 }
 
 .product .product-body .product-price {
-  color: #D10024;
+  color: #0984e3;
   font-size: 18px;
 }
 
@@ -1025,7 +1042,7 @@ textarea.input {
 
 .product .product-body .product-btns>button:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #0984e3;
   border-radius: 50%;
 }
 
@@ -1101,15 +1118,15 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: #D10024;
+  color: #0984e3;
   opacity: 0;
   visibility: hidden;
 }
 
 .product .add-to-cart .add-to-cart-btn:hover {
   background-color: #FFF;
-  color: #D10024;
-  border-color: #D10024;
+  color: #0984e3;
+  border-color: #0984e3;
   padding: 0px 30px 0px 50px;
 }
 
@@ -1162,12 +1179,12 @@ textarea.input {
 }
 
 .product-widget .product-body .product-name>a:hover, .product-widget .product-body .product-name>a:focus {
-  color: #D10024;
+  color: #0984e3;
 }
 
 .product-widget .product-body .product-price {
   font-size: 14px;
-  color: #D10024;
+  color: #0984e3;
 }
 
 .product-widget .product-body .product-price .product-old-price {
@@ -1293,7 +1310,7 @@ textarea.input {
 }
 
 .noUi-connect {
-  background-color: #D10024;
+  background-color: #0984e3;
 }
 
 .noUi-horizontal {
@@ -1306,7 +1323,7 @@ textarea.input {
   left: -6px;
   top: -4px;
   border: none;
-  background: #D10024;
+  background: #0984e3;
   -webkit-box-shadow: none;
   box-shadow: none;
   border-radius: 50%;
@@ -1367,12 +1384,12 @@ textarea.input {
 
 .store-grid li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #0984e3;
 }
 
 .store-grid li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #0984e3;
+  border-color: #0984e3;
   color: #FFF;
   cursor: default;
 }
@@ -1405,12 +1422,12 @@ textarea.input {
 
 .store-pagination li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #0984e3;
 }
 
 .store-pagination li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #0984e3;
+  border-color: #0984e3;
   color: #FFF;
   font-weight: 500;
   cursor: default;
@@ -1474,7 +1491,7 @@ textarea.input {
 }
 
 #product-imgs .product-preview.slick-current {
-  border-color: #D10024;
+  border-color: #0984e3;
 }
 
 #product-imgs .slick-prev {
@@ -1524,7 +1541,7 @@ textarea.input {
 }
 
 .product-details .product-rating>i.fa-star {
-  color: #D10024;
+  color: #0984e3;
 }
 
 .product-details .review-link {
@@ -1536,7 +1553,7 @@ textarea.input {
   font-size: 24px;
   margin-top: 10px;
   margin-bottom: 15px;
-  color: #D10024;
+  color: #0984e3;
 }
 
 .product-details .product-price .product-old-price {
@@ -1550,7 +1567,7 @@ textarea.input {
   text-transform: uppercase;
   font-weight: 700;
   margin-left: 30px;
-  color: #D10024;
+  color: #0984e3;
 }
 
 .product-details .product-options {
@@ -1595,15 +1612,15 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: #D10024;
+  color: #0984e3;
   opacity: 0;
   visibility: hidden;
 }
 
 .product-details .add-to-cart .add-to-cart-btn:hover {
   background-color: #FFF;
-  color: #D10024;
-  border-color: #D10024;
+  color: #0984e3;
+  border-color: #0984e3;
   padding: 0px 30px 0px 50px;
 }
 
@@ -1693,7 +1710,7 @@ textarea.input {
 }
 
 #product-tab .tab-nav li.active a {
-  color: #D10024;
+  color: #0984e3;
 }
 
 #product-tab .tab-nav li a:after {
@@ -1701,7 +1718,7 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D10024;
+  background-color: #0984e3;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -1731,7 +1748,7 @@ textarea.input {
 }
 
 .rating-avg .rating-stars>i.fa-star, .rating .rating-stars>i.fa-star {
-  color: #D10024;
+  color: #0984e3;
 }
 
 .rating li {
@@ -1749,7 +1766,7 @@ textarea.input {
 }
 
 .rating .rating-progress>div {
-  background-color: #D10024;
+  background-color: #0984e3;
   position: absolute;
   left: 0;
   top: 0;
@@ -1803,7 +1820,7 @@ textarea.input {
 }
 
 .reviews .review-heading .review-rating>i.fa-star {
-  color: #D10024;
+  color: #0984e3;
 }
 
 .reviews-pagination {
@@ -1824,12 +1841,12 @@ textarea.input {
 
 .reviews-pagination li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #0984e3;
 }
 
 .reviews-pagination li.active {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #0984e3;
+  border-color: #0984e3;
   color: #FFF;
   cursor: default;
 }
@@ -1873,12 +1890,12 @@ textarea.input {
 }
 
 .review-form .input-rating .stars>label:hover:before, .review-form .input-rating .stars>label:hover~label:before {
-  color: #D10024;
+  color: #0984e3;
 }
 
 .review-form .input-rating .stars>input:checked label:before, .review-form .input-rating .stars>input:checked~label:before {
   content: "\f005";
-  color: #D10024;
+  color: #0984e3;
 }
 
 /*=========================================================
@@ -1944,7 +1961,7 @@ textarea.input {
 
 .order-summary .order-col .order-total {
   font-size: 24px;
-  color: #D10024;
+  color: #0984e3;
 }
 
 .order-details .payment-method {
@@ -1962,7 +1979,7 @@ textarea.input {
 
 #newsletter.section {
   border-top: 2px solid #E4E7ED;
-  border-bottom: 3px solid #D10024;
+  border-bottom: 3px solid #0984e3;
   margin-top: 30px;
 }
 
@@ -2004,7 +2021,7 @@ textarea.input {
   width: 160px;
   height: 40px;
   font-weight: 700;
-  background: #D10024;
+  background: #0984e3;
   color: #FFF;
   border: none;
   border-radius: 0px 40px 40px 0px;
@@ -2038,7 +2055,7 @@ textarea.input {
 
 .newsletter .newsletter-follow li a:hover, .newsletter .newsletter-follow li a:focus {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #0984e3;
 }
 
 /*=========================================================
@@ -2046,12 +2063,12 @@ textarea.input {
 ===========================================================*/
 
 #footer {
-  background: #15161D;
-  color: #B9BABC;
+  background: #74b9ff;
+  color: #FFF;
 }
 
 #bottom-footer {
-  background: #1E1F29;
+  background: #74b9ff;
 }
 
 .footer {
@@ -2070,18 +2087,18 @@ textarea.input {
 }
 
 .footer-links li a {
-  color: #B9BABC;
+  color: #FFF;
 }
 
 .footer-links li i {
   margin-right: 15px;
-  color: #D10024;
+  color: #0984e3;
   width: 14px;
   text-align: center;
 }
 
 .footer-links li a:hover {
-  color: #D10024;
+  color: #0984e3;
 }
 
 .copyright {
@@ -2121,8 +2138,8 @@ textarea.input {
 }
 
 .slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
-  background-color: #D10024;
-  border-color: #D10024;
+  background-color: #0984e3;
+  border-color: #0984e3;
 }
 
 .slick-prev:before, .slick-next:before {
@@ -2167,7 +2184,7 @@ textarea.input {
 }
 
 .slick-dots li.slick-active button:before {
-  background-color: #D10024;
+  background-color: #0984e3;
 }
 
 .custom-dots .slick-dots {
